<resources>
    <string name="app_name">Campi</string>
    <string name="logout">Cerrar sesión</string>
    <string name="refresh">Refrescar</string>
    <string name="novelty">Novedad</string>
    <string name="arrival">Arribo</string>
    <string name="takemeplace">Llévame</string>
    <string name="orden_filtros">Orden / filtros</string>
    <string name="see_ticket">VER TICKET</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permissions">Permisos de escritura</string>
    <string name="settings">Ajustes</string>
    <string name="domain">Dominio</string>
    <string name="userName">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login_in">Aceptar</string>
    <string name="icon_state">Tipo de elemento</string>
    <string name="ticket_description">Descripcion</string>
    <string name="element_name">Nombre del elemento</string>
    <string name="distance">Distancia</string>
    <string name="no_ticket">No. ticket</string>
    <string name="search">Buscar</string>
    <string name="take_photo">Novedad nueva</string>
    <string name="arrivalAction">Arrivo</string>
    <string name="rideMeAction">Llevame</string>
    <string name="attachment">Archivo adjunto</string>
    <string name="automatic_event">Evento automático</string>

    <string name="title_activity_picture_preview">PicturePreviewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="photo_preview">photo_preview</string>
    <string name="add_description">Añadir descripción</string>
    <string name="campi">Campi</string>
    <string name="data">Datos</string>
    <string name="without_tickets">Sin tickets asignados</string>
    <string name="rotateAction">Rotar imagen</string>
    <string name="cancel_action">Cancelar</string>
    <string name="camera_error">Error al tomar la foto</string>
    <string name="panic">Pánico</string>
    <string name="need_access_location">Campi necesita permisos</string>
    <string name="need_access_location_explain">Campi necesita permisos para conocer tu ubicación</string>
    <string name="app_requires_location_title">Campi requiere localización</string>
    <string name="app_requires_location_content">Accede a los ajustes de ubicacion y activa el GPS</string>
    <string name="panic_sent">Pánico enviado</string>
    <string name="time_pressed">Presione por 3 segundos</string>
    <string name="finishAction">Salida</string>
    <string name="sign">Firma</string>
    <string name="clear_pad">Borrar</string>
    <string name="send_sign">Enviar</string>
    <string name="attached_photo">Foto adjunta</string>
    <string name="quantity">Cantidad</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="error_quantity_expectation">El número debe ser mayor a 0</string>
    <string name="title_activity_spare_parts">Refacciones</string>
    <string name="event_list">Lista de eventos</string>
    <string name="without_parts">Evento sin refacciones</string>
    <string name="deleteAction">Eliminiar</string>
    <string name="can_add_parts">Refacciones</string>
    <string name="client_name">Ingresa el nombre del cliente</string>
    <string name="quality">Califica el servicio</string>
    <string name="bad">malo</string>
    <string name="regular">regular</string>
    <string name="good">bueno</string>
</resources>
