<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/refresh_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                app:cardCornerRadius="3dp"
                android:elevation="8dp"
                app:contentPadding="10dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/stateIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/icon_state" />

                        <TextView
                            android:id="@+id/no_ticket"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_ticket"
                            android:textColor="@color/blackString"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/element_name"
                            android:id="@+id/name"
                            android:textColor="@color/blackString"
                            android:textSize="16sp"/>
                        <TextView
                            android:id="@+id/ticket_des"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ticket_description"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                app:cardCornerRadius="3dp"
                android:elevation="8dp"
                tools:targetApi="lollipop">

                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    android:id="@+id/taskListView" />

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/noveltyPictAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="200dp"
            android:src="@drawable/ic_take_photo_white"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            android:visibility="invisible"
            tools:targetApi="lollipop"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/noveltyCommentAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="140dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/ic_comments"
            android:visibility="invisible"
            tools:targetApi="lollipop"/>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/signAction"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/ic_sign"
            tools:targetApi="lollipop"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            app:elevation="6dp"
            app:backgroundTint="@color/greenForActions"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/ic_options"
            tools:targetApi="lollipop"/>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:paddingBottom="4dp">
            <ImageButton
                android:id="@+id/panicAction"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:elevation="6dp"
                android:background="@drawable/oval_panic_shape"
                android:src="@drawable/ic_warning_white_50dp"
                android:paddingBottom="7dp"
                tools:targetApi="lollipop"
                android:contentDescription="@string/panic" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>